Fix light theme pin icon visibility (#4477)
* Remove what-input dependency


* Use focus-visible prop and color fix in Icon

--- a/src/renderer/components/layout/sidebar-cluster.module.css
+++ b/src/renderer/components/layout/sidebar-cluster.module.css
@@ -32,7 +32,6 @@
   &:focus-visible {
     .dropdown {
       box-shadow: 0 0 0 2px var(--focus-color);
-      color: white;
     }
   }
 
